--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-	<title>Dr.ick</title>
+	<title>Calculator Ilham Prasetyo Widodo</title>
 	
 	<!-- CSS -->
 	<link rel="stylesheet" type="text/css" href="styles.css">
